--- a/public/stylesheets/bootstrapcopy.css
+++ b/public/stylesheets/bootstrapcopy.css
@@ -1,1 +1,1 @@
-/* lessc: ENOENT, open '/home/win/Downloads/twitter-bootstrap-857b8fb/less/boostrap.less'
+lessc: ENOENT, open '/home/win/Downloads/twitter-bootstrap-857b8fb/less/boostrap.less'
